--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 	<br />
 <h1>Contactanos</h1>
 <br />
-<input type="text" name="NOMBRE" placeholder="NOMBRE" required>
+<input type="text" name="NOMBRE" placeholder="NOMBRE" required=>
 <input type="email" name="CORREO" placeholder="CORREO" required>
 <input type="number" name="TELEFONO" placeholder="TELEFONO" required>
 <textarea name="mensaje" placeholder="Escribe tu mensaje" required></textarea>
-<input type="submit" value="ENVIAR" id="boton" placeholder="ENVIAR">
+<input type="submit" value="ENVIAR" id="boton" placeholder="ENVIAR"> 
+<!-- <a href="gracias.html">ENVIAR</a> -->
 </form>
 </body>
 </html>
